# package_calculator

./: .gitignore  README.md  TestCalculadora.py  pyproject.toml  test.sh
.github/workflows/: ci.yml  ci_calculadora.yml
package_calculator/: Calculadora.py  __init__.py
